--- a/parckman/index.html
+++ b/parckman/index.html
@@ -83,6 +83,8 @@
     let npcPath;
     let npcPathIndex = 0;
     const npcSpeed = 100; // Скорость NPC
+    const npcWidth = 40; // Ширина спрайта NPC
+    const npcOffset = npcWidth / 2; // Смещение от края дороги внутрь
 
     function preload() {
       // Загрузка изображений
@@ -123,13 +125,13 @@
       npcCar = this.physics.add.sprite(100, 100, 'npcCar').setScale(0.5);
       npcCar.setCollideWorldBounds(true);
 
-      // Задаем путь для NPC (координаты точек пути)
+      // Задаем путь для NPC (координаты точек пути с учетом смещения внутрь дороги)
       npcPath = [
-        { x: 100, y: 100 }, // Начальная точка (верхний левый угол)
-        { x: 700, y: 100 }, // Движение вправо по верхней горизонтальной дороге
-        { x: 700, y: 700 }, // Движение вниз по правой вертикальной дороге
-        { x: 100, y: 700 }, // Движение влево по нижней горизонтальной дороге
-        { x: 100, y: 100 }  // Движение вверх по левой вертикальной дороге (возврат в начало)
+        { x: 100 + npcOffset, y: 100 + npcOffset }, // Начальная точка (верхний левый угол)
+        { x: 700 - npcOffset, y: 100 + npcOffset }, // Движение вправо по верхней горизонтальной дороге
+        { x: 700 - npcOffset, y: 700 - npcOffset }, // Движение вниз по правой вертикальной дороге
+        { x: 100 + npcOffset, y: 700 - npcOffset }, // Движение влево по нижней горизонтальной дороге
+        { x: 100 + npcOffset, y: 100 + npcOffset }  // Движение вверх по левой вертикальной дороге (возврат в начало)
       ];
 
       // Начинаем движение NPC
