--- a/parckman/index.html
+++ b/parckman/index.html
@@ -23,6 +23,31 @@
   </style>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
   <script>
+    /*
+      ============================================
+      ОПИСАНИЕ ИГРЫ "MASTER PARKING"
+      ============================================
+
+      Цель игры:
+      Игрок должен как можно быстрее и точнее припарковать автомобиль на заданное парковочное место.
+      На пути игрока встречаются препятствия: другие автомобили (NPC), мотоциклисты, пешеходы и т.д.
+
+      Базовая механика:
+      1. Игрок управляет автомобилем, который может двигаться только по дорогам.
+      2. На карте есть парковочные места, на которые нужно припарковаться.
+      3. NPC (другие автомобили, мотоциклисты, пешеходы) двигаются по своим маршрутам и создают препятствия.
+      4. Игрок должен избегать столкновений с NPC и другими объектами.
+      5. Победа засчитывается, когда игрок успешно паркуется на заданное место за минимальное время.
+
+      Особенности:
+      - Дороги: все объекты (игрок и NPC) могут двигаться только по дорогам.
+      - Парковочные места: на них могут стоять NPC, и на одно из них нужно припарковаться.
+      - NPC: двигаются по заданным маршрутам, могут заезжать и выезжать с парковочных мест.
+      - Физика: реализована с использованием движка Phaser 3 (arcade physics).
+
+      ============================================
+    */
+
     const config = {
       type: Phaser.AUTO,
       width: 800,
